--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.11",
     "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-checkbox": "~2.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-radio-button": "^1.0.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.22.2",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
